[gd_scene load_steps=5 format=3 uid="uid://bc1i67hbm3yk2"]

[ext_resource type="FontFile" uid="uid://chi82p2s47xr2" path="res://fonts/Xolonium-Regular.ttf" id="1_0qfos"]
[ext_resource type="Script" path="res://hud.gd" id="1_urgqv"]

[sub_resource type="InputEventAction" id="InputEventAction_jr7ew"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_ucpmj"]
events = [SubResource("InputEventAction_jr7ew")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_urgqv")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 97.0
offset_top = 48.0
offset_right = 238.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 45
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 96.0
offset_right = 237.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 45
text = "00.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 248.0
offset_top = 56.0
offset_right = 337.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 22
text = "Pontos:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
offset_left = 248.0
offset_top = 8.0
offset_right = 334.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 22
text = "Tempo:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -39.0
offset_right = 240.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 64
text = "Baby Spice!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -712.0
offset_right = -130.0
offset_bottom = -647.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_0qfos")
theme_override_font_sizes/font_size = 23
shortcut = SubResource("Shortcut_ucpmj")
text = "Menu"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
